# chat

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/tests/values/: test_messages.py
docker_compose/: app.yaml
