[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "flawsterQQ",email = "ruslan.rogalskiy@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "motor (>=3.6.0,<4.0.0)",
    "uvicorn[all] (>=0.34.0,<0.35.0)",
    "make (>=0.1.6.post2,<0.2.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "faker (>=33.3.0,<34.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
